--- a/AbstractFood/app/src/main/res/values/strings.xml
+++ b/AbstractFood/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="login"> Abstract Foods</string>
     <string name="discover">Discover</string>
     <string name="signup">Sign Up!</string>
+    <string name="main_image">Add Main Image</string>
 </resources>
