added report activity

--- a/AbstractFood/app/src/main/res/values/strings.xml
+++ b/AbstractFood/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="short_des">Short Description:</string>
     <string name="ingred">Ingredient Adder</string>
     <string name="cancel">Cancel</string>
+    <string name="title_activity_ingredient_adder">IngredientAdderActivity</string>
 </resources>
