Home page added and profile page updated(images can be clicked)

--- a/AbstractFood/app/src/main/res/values/strings.xml
+++ b/AbstractFood/app/src/main/res/values/strings.xml
@@ -12,4 +12,9 @@
     <string name="ingred">Ingredient Adder</string>
     <string name="cancel">Cancel</string>
     <string name="title_activity_ingredient_adder">IngredientAdderActivity</string>
+    <string name="title_activity_change_password">ChangePasswordActivity</string>
+    <string name="hello_round">Hello Round World!</string>
+    <string name="hello_square">Hello Square World!</string>
+    <string name="title_activity_change_passsword">ChangePasssword</string>
+    <string name="change_passowrd">Change Password</string>
 </resources>
