--- a/AbstractFood/app/src/main/res/values/strings.xml
+++ b/AbstractFood/app/src/main/res/values/strings.xml
@@ -18,4 +18,19 @@
     <string name="title_activity_change_passsword">ChangePasssword</string>
     <string name="change_passowrd">Change Password</string>
     <string name="searchbyname">Search By Name</string>
+
+
+    <!-- Testing PLEASE IGNORE BELOW  -->
+
+    <string name="IngredientFinderTitle">Ingredient Finder</string>
+    <string name="IngredientFinderD">Add or Remove Ingredients.</string>
+    <string name="IF_settings">Settings</string>
+    <string name="IFactivity">IngredientFinderActivity</string>
+    <string name="add">Add Ingredient</string>
+    <string name="remove">Remove Ingredient</string>
+    <string name="currentlist">Ingredients:</string>
+
+
+
+
 </resources>
