--- a/AbstractFood/app/src/main/res/values/strings.xml
+++ b/AbstractFood/app/src/main/res/values/strings.xml
@@ -28,8 +28,8 @@
     <string name="IngredientFinderD">Add or Remove Ingredients.</string>
     <string name="IF_settings">Settings</string>
     <string name="IFactivity">IngredientFinderActivity</string>
-    <string name="add">Add Ingredient</string>
-    <string name="remove">Remove Ingredient</string>
+    <string name="add">Add</string>
+    <string name="remove">Remove</string>
     <string name="currentlist">Ingredients:</string>
 
 
