Where to start... Ingredient finder works, Search by name works, some of the buttons in various pages are changed back to gray, the textboxes now start at the top, food is sent food successfully

--- a/AbstractFood/app/src/main/res/values/strings.xml
+++ b/AbstractFood/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
 
     <!-- Testing PLEASE IGNORE BELOW  -->
 
-    <string name="IngredientFinderTitle">Ingredient Finder</string>
+    <string name="IngredientFinderTitle">   Search Results</string>
     <string name="IngredientFinderD">Add or Remove Ingredients.</string>
     <string name="IF_settings">Settings</string>
     <string name="IFactivity">IngredientFinderActivity</string>
